--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>React App</title>
 </head>
 <body>
-    <div id="root"></div> <!-- Make sure this matches the ID used in your JavaScript -->
+    <div id="root"></div> 
 </body>
 </html>
