--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="" />
-    <title>React App</title>
+    <title>FlowChanger AI</title>
  
   </head>
   <body>
